tests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlgateway
  namespace: mlops-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/app-root: /test/audit
spec:
  rules:
  - http:
      paths:
      - path: /ml/audit
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlgateway
  namespace: mlops-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/app-root: /test/healthz
spec:
  rules:
  - http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port:
              number: 80
